[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/InventorySlot.png" type="Texture" id=1]
[ext_resource path="res://UI/ItemSlot.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[node name="ItemSlot" type="Control"]
margin_right = 14.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
rect_pivot_offset = Vector2( 70, 28 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
show_behind_parent = true
margin_right = 14.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dropbox" type="Area2D" parent="."]
visible = false
position = Vector2( 2, 2 )
collision_layer = 64
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dropbox"]
position = Vector2( 5, 5 )
shape = SubResource( 1 )

[node name="ZIndexNode" type="Node2D" parent="."]
z_index = 4

[node name="ItemTexture" type="TextureRect" parent="ZIndexNode"]
margin_left = 2.0
margin_top = 2.0
margin_right = 12.0
margin_bottom = 12.0
rect_min_size = Vector2( 10, 10 )
rect_pivot_offset = Vector2( 5, 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemBox" type="Area2D" parent="ZIndexNode/ItemTexture"]
monitorable = false
collision_layer = 128
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZIndexNode/ItemTexture/ItemBox"]
position = Vector2( 5, 5 )
shape = SubResource( 2 )
[connection signal="mouse_entered" from="ZIndexNode/ItemTexture" to="." method="_on_ItemTexture_mouse_entered"]
[connection signal="mouse_exited" from="ZIndexNode/ItemTexture" to="." method="_on_ItemTexture_mouse_exited"]
[connection signal="area_shape_entered" from="ZIndexNode/ItemTexture/ItemBox" to="." method="_on_ItemBox_area_shape_entered"]
[connection signal="area_shape_exited" from="ZIndexNode/ItemTexture/ItemBox" to="." method="_on_ItemBox_area_shape_exited"]
